<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="13"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Hindrances" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hindRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Edges" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edgeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <EditText
        android:id="@+id/addEdgeHindNameView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/label_name" />

    <EditText
        android:id="@+id/addEdgeHindDescView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/label_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addEdgeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_edge_btn" />

        <Button
            android:id="@+id/addMajorBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_major_btn" />

        <Button
            android:id="@+id/addMinorBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_minor_btn" />
    </LinearLayout>
</LinearLayout>