<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_remaining"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill_pts_label"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/skillPtsRemainingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:text="12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hind_pts_label"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/skillHindPointsRemainingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="4" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skills"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skillRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>